--- a/src/collections/allProjects.json
+++ b/src/collections/allProjects.json
@@ -12,22 +12,10 @@
 		"url": "https://15gio.github.io/micumple/"
 	},
 	{
-		"name": "Wedding Invitation",
-		"description": "Virtual invitation for a wedding.",
-		"image": "/portfolio/assets/images/projects/wedding.png",
-		"url": "https://emi679.github.io/boda-shei-emi/"
-	},
-	{
-		"name": "API Rest with Java Spring Boot",
-		"description": "API Rest for integration of Laser cutting software with a management application",
-		"image": "/portfolio/assets/images/projects/04.png",
-		"url": "https://www.linkedin.com/posts/fernando-conil-608913185_optimizando-el-corte-l%C3%A1ser-con-mi-nuevo-activity-7204533238277513217-BGWr?utm_source=share&utm_medium=member_desktop"
-	},
-	{
-		"name": "15th Birthday Invitation",
-		"description": "Querying DNS Resolution Results in Different Regions Worldwide.",
-		"image": "/portfolio/assets/images/projects/15th birthday.png",
-		"url": "https://15gio.github.io/micumple/"
+		"name": "Booking application for trips",
+		"description": "Final career project",
+		"image": "/portfolio/assets/images/ctd/01.png",
+		"url": "https://github.com/DanielRizzu/IntegradorCTD"
 	},
 	{
 		"name": "Wedding Invitation",
