--- a/src/collections/projects.json
+++ b/src/collections/projects.json
@@ -12,9 +12,9 @@
 		"url": "https://15gio.github.io/micumple/"
 	},
 	{
-		"name": "Wedding Invitation",
-		"description": "Virtual invitation for a wedding.",
-		"image": "/portfolio/assets/images/projects/wedding.png",
-		"url": "https://emi679.github.io/boda-shei-emi/"
+		"name": "Booking application for trips",
+		"description": "Final career project",
+		"image": "/portfolio/assets/images/ctd/01.png",
+		"url": "https://github.com/DanielRizzu/IntegradorCTD"
 	}
 ]
