--- a/src/collections/projects.json
+++ b/src/collections/projects.json
@@ -7,13 +7,13 @@
 	},
 	{
 		"name": "15th Birthday Invitation",
-		"description": "Querying DNS Resolution Results in Different Regions Worldwide.",
+		"description": "Web with information about a birthday party. Host on Github Pages and developed with React ",
 		"image": "/portfolio/assets/images/projects/15th birthday.png",
 		"url": "https://15gio.github.io/micumple/"
 	},
 	{
 		"name": "Booking application for trips",
-		"description": "Final career project",
+		"description": "Final career project. Created with Spring Boot, React and MySQL",
 		"image": "/portfolio/assets/images/ctd/01.png",
 		"url": "https://github.com/DanielRizzu/IntegradorCTD"
 	}
