--- a/src/collections/projects.json
+++ b/src/collections/projects.json
@@ -1,16 +1,16 @@
 [
 	{
+		"name": "Website for a metallurgical company",
+		"description": "Developed with Wordpress",
+		"image": "/portfolio/assets/images/tolaba/01.png",
+		"url": "https://metalurgicatolaba.com/"
+	},
+	{
 		"name": "Web application for laser-cut pieces with Java Spring Boot and React",
 		"description": "Application to integrate a laser-cut software with a management application",
 		"image": "/portfolio/assets/images/projects/05.png",
 		"url": "https://www.linkedin.com/posts/fernando-conil-608913185_optimizando-el-corte-l%C3%A1ser-con-mi-nuevo-activity-7204533238277513217-BGWr?utm_source=share&utm_medium=member_desktop"
-	},
-	{
-		"name": "15th Birthday Invitation",
-		"description": "Web with information about a birthday party. Host on Github Pages and developed with React ",
-		"image": "/portfolio/assets/images/projects/15th birthday.png",
-		"url": "https://15gio.github.io/micumple/"
-	},
+	},	
 	{
 		"name": "Booking application for trips",
 		"description": "Final career project. Created with Spring Boot, React and MySQL",
